--- a/index.html
+++ b/index.html
@@ -3,14 +3,44 @@ layout: page
 css: ["index.css", "projects.css"]
 ---
 
+<link rel="shortcut icon" type="image/png" href="{{ '/assets/res/favicon.png' | relative_url }}">
+
+<style>
+body {
+  background-color: white;
+}
+
+a {
+  color: #1A0DAB;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:visited {
+  color: #660099;
+}
+
+</style>
+
+<img src="/assets/res/biocore_banner.png">
+<h1>Training Workshops Course Material</h1>
 
 <div class="col s12">
-  <p>To learn more about the UC Davis Bioinformatics data analysis services and training program, visit <a href="https://bioinformatics.ucdavis.edu/" target="_blank" rel="noreferrer noopener">our website</a>. Dates and prices for our current workshops can be found on the <a href="https://registration.genomecenter.ucdavis.edu/" target="_blank" rel="noreferrer noopener">Genome Center Event Registration</a> site.</p>
+  <h3>
+  To learn more about the UC Davis Bioinformatics data analysis services and training program, visit the <a href="https://bioinformatics.ucdavis.edu/" target="_blank" rel="noreferrer noopener">Bioinformatics Core website</a>. Dates and prices for our current workshops can be found on the <a href="https://registration.genomecenter.ucdavis.edu/" target="_blank" rel="noreferrer noopener">Genome Center Event Registration</a> site.
+</h3>
 </div>
 
 
 {% assign sorted_repos = site.github.public_repositories | sort: 'created_at' | reverse %}
 {% for repo in sorted_repos %}
+<h2>
   {% if repo.has_pages %}
       <a href="{{repo.html_url | replace: 'github.com/ucdavis-bioinformatics-training', 'ucdavis-bioinformatics-training.github.io' }}" target="_blank">
         {{repo.name | replace: "-", " " | replace: "_", " "}}<br/>
@@ -20,5 +50,6 @@ css: ["index.css", "projects.css"]
         {{repo.name | replace: "-", " " | replace: "_", " "}}<br/>
       </a>
   {% endif %}
-  {{repo.description}}<br/><br/>
+  {{repo.description}}
+</h2>
 {% endfor %}
