--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ a:visited {
 </h3>
 </div>
 
-
+<hr/>
 {% assign sorted_repos = site.github.public_repositories | sort: 'created_at' | reverse %}
 {% for repo in sorted_repos %}
-<h2>
+<h3>
   {% if repo.has_pages %}
       <a href="{{repo.html_url | replace: 'github.com/ucdavis-bioinformatics-training', 'ucdavis-bioinformatics-training.github.io' }}" target="_blank">
         {{repo.name | replace: "-", " " | replace: "_", " "}}<br/>
@@ -50,6 +50,7 @@ a:visited {
         {{repo.name | replace: "-", " " | replace: "_", " "}}<br/>
       </a>
   {% endif %}
-  {{repo.description}}
-</h2>
+</h3>
+<h4>{{repo.description}}</h4>
+<hr/>
 {% endfor %}
