--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1 {
 
 <div class="col s12">
   <h3>
-  To learn more about the UC Davis Bioinformatics data analysis services and training program, visit the <a href="https://bioinformatics.ucdavis.edu/" target="_blank">Bioinformatics Core website</a>. Dates and prices for our current workshops can be found on the <a href="https://registration.genomecenter.ucdavis.edu/" target="_blank">Genome Center Event Registration</a> site.
+  To learn more about the UC Davis Bioinformatics data analysis services and training program, visit the <a href="https://bioinformatics.ucdavis.edu/" target="_blank">Bioinformatics Core website</a>. Dates and prices for our upcoming workshops can be found on the <a href="https://registration.genomecenter.ucdavis.edu/" target="_blank">Genome Center Event Registration</a> site.
 </h3>
 </div>
 
