adding link to banner

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h1 {
 
 </style>
 
-<img src="/assets/res/biocore_banner.png">
+<a href="https://bioinformatics.ucdavis.edu/" target="_blank"><img src="/assets/res/biocore_banner.png"></a>
 <h1>Training Workshops Course Material</h1>
 
 <div class="col s12">
