removing unneeded css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-css: ["index.css", "projects.css"]
+css: ["index.css"]
 ---
 
 <link rel="shortcut icon" type="image/png" href="{{ '/assets/res/favicon.png' | relative_url }}">
@@ -40,11 +40,9 @@ h1 {
 <a href="https://bioinformatics.ucdavis.edu/" target="_blank"><img src="/assets/res/biocore_banner.png"></a>
 <h1>Training Workshops Course Material</h1>
 
-<div class="col s12">
-  <h3>
+<h3>
   To learn more about the UC Davis Bioinformatics data analysis services and training program, visit the <a href="https://bioinformatics.ucdavis.edu/" target="_blank">Bioinformatics Core website</a>. Dates and prices for our upcoming workshops can be found on the <a href="https://registration.genomecenter.ucdavis.edu/events/organizer/bioinformatics_core/" target="_blank">Genome Center Event Registration</a> site.
 </h3>
-</div>
 
 <hr/>
 <hr/>
