--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-css: ["index.css"]
+layout: page
 ---
 
 <link rel="shortcut icon" type="image/png" href="{{ '/assets/res/favicon.png' | relative_url }}">
